# gtk_estate

./: .gitignore  CHANGELOG.md  CHANGELOG_Notes_v0_4_0.md  Cargo.toml  README.md  gtk_estate.code-workspace
src/: adapters.rs  adw_application_window_state.rs  adw_enums.rs  adw_window_state.rs  clear_state_containers_on_drop.rs  container_map.rs  container_widget_ref.rs  contents.rs  diy.rs  gtk_window_state.rs  lib.rs  rc time_out.rs  rc_conversions.rs  scoped_signal_handler_id.rs  scoped_signal_handler_id_hashmap.rs  scoped_source_id.rs  simple_time_out.rs  state_containers.rs  strong_adapters.rs  strong_adw_application_window_state.rs  strong_adw_window_state.rs  strong_gtk_window_state.rs  strong_widget_state_containers.rs  time_out.rs  time_out_with_parent.rs  weak_adapters.rs  weak_state_containers.rs  widget_container.rs  widget_state_containers.rs  widget_upgrade_error_handlers.rs
src/helpers/: mod.rs  paned.rs  text_view.rs  widget_ext.rs
src/old/: container_node.rs  container_vec.rs  container_widget_ref.rs  gtk_enums.rs  hash_by_widget.rs  helpers.rs  node_contents.rs  object_container.rs  state_containers.rs
src/old/GTK/: application_node.rs
src/old/older/: storage_container.rs
src/old/older/GTK/: mod.rs
template/: applicaion_state.rs  main.rs  window_contents_state.rs  window_state.rs
template/actors/: mod.rs
