[package]
name = "gtk_estate"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A GTK and libadwaita state association library"
repository = "https://github.com/coruscateor/gtk_estate"
homepage = "https://coruscateor.com/projects/gtk_estate"
keywords = ["GUI", "state", "widget", "GTK", "libadwaita"]
categories = ["gui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#corlib = { path="../corlib" } #Do not remove
corlib = "0.1.0"
delegate = "0.*"
gtk4 = "0.6.*" #"0.5.*"
#libadwaita = "0.1.1"
paste = "1.0.*"

[dependencies.adw]
package = "libadwaita"
version = "0.4.*" #"0.2.1"
#version = "0.2.0-alpha.2"

