[package]
name = "gtk_estate"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A GTK and libadwaita state association library"
readme = "README.md"
repository = "https://github.com/coruscateor/gtk_estate"
homepage = "https://coruscateor.com/projects/gtk-estate"
keywords = ["GUI", "state", "widget", "GTK", "libadwaita"]
categories = ["gui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
corlib = { path="../corlib" } #Do not remove
#corlib = "0.2.0"
delegate = "0.*"
gtk4 = "0.8.*" #"0.6.*" #"0.5.*"
#libadwaita = "0.1.1"
paste = "1.0.*"
cfg-if = "1.0.0"

[dependencies.adw]
package = "libadwaita"
version = "0.6.*" #"0.4.*" #"0.2.1"
optional = true
#version = "0.2.0-alpha.2"

[features]

#GTK

gtk_v4_14 = ["gtk4/v4_14"]
gtk_v4_12 = ["gtk4/v4_12"]
gtk_v4_10 = ["gtk4/v4_10"]
gtk_v4_8 = ["gtk4/v4_8"]
gtk_v4_6 = ["gtk4/v4_6"]
gtk_v4_4 = ["gtk4/v4_4"]
gtk_v4_2 = ["gtk4/v4_2"]
gtk_gnome_45 = ["gtk4/gnome_45"]
gtk_gnome_44 = ["gtk4/gnome_44"]
gtk_gnome_43 = ["gtk4/gnome_43"]
gtk_gnome_42 = ["gtk4/gnome_42"]
gtk_unsafe-assume-initialized = ["gtk4/unsafe-assume-initialized"]
gtk_xml_validation = ["gtk4/xml_validation"]
gtk_blueprint = ["gtk4/blueprint"]

#ADW

adw = ["dep:adw"]
adw_gtk_v4_2 = ["adw/gtk_v4_2"]
adw_gtk_v4_4 = ["adw/gtk_v4_4"]
adw_gtk_v4_6 = ["adw/gtk_v4_6"]
adw_gtk_v4_8 = ["adw/gtk_v4_8"]
adw_gtk_v4_10 = ["adw/gtk_v4_10"]
adw_gtk_v4_12 = ["adw/gtk_v4_12"]
adw_v1_2 = ["adw/v1_2"]
adw_v1_3 = ["adw/v1_3"]
adw_v1_4 = ["adw/v1_4"]
adw_v1_5 = ["adw/v1_5"]

