[package]
name = "gtk_estate"
version = "0.4.0-beta"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A GTK and libadwaita state association library"
readme = "README.md"
repository = "https://github.com/coruscateor/gtk_estate"
homepage = "https://coruscateor.com/projects/gtk-estate"
keywords = ["GUI", "state", "widget", "GTK", "adwaita"]
categories = ["gui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#corlib = { path="../corlib" } #Do not remove
corlib = "0.4.1"
delegate = "0.13.1"

gtk = { package = "gtk4", version = "0.9.6" }
cfg-if = "1.0.0"
paste = "1.0.15"

[dependencies.adw]
package = "libadwaita"
version = "0.7.2"
optional = true

[features]

default = ["thread_local_state"]

thread_local_state = []

strong_widget_state = []

#GTK 4

gtk4_v4_18 = ["gtk/v4_18"]
gtk4_v4_16 = ["gtk/v4_16"]
gtk4_v4_14 = ["gtk/v4_14"]
gtk4_v4_12 = ["gtk/v4_12"]
gtk4_v4_10 = ["gtk/v4_10"]
gtk4_v4_8 = ["gtk/v4_8"]
gtk4_v4_6 = ["gtk/v4_6"]
gtk4_v4_4 = ["gtk/v4_4"]
gtk4_v4_2 = ["gtk/v4_2"]
gtk4_gnome_47 = ["gtk/gnome_47"]
gtk4_gnome_46 = ["gtk/gnome_46"]
gtk4_gnome_45 = ["gtk/gnome_45"]
gtk4_gnome_44 = ["gtk/gnome_44"]
gtk4_gnome_43 = ["gtk/gnome_43"]
gtk4_gnome_42 = ["gtk/gnome_42"]
gtk4_unsafe-assume-initialized = ["gtk/unsafe-assume-initialized"]
gtk4_xml_validation = ["gtk/xml_validation"]
gtk4_blueprint = ["gtk/blueprint"]

#GTK

#gtk_v4_18 = ["gtk4/v4_18"]
#gtk_v4_16 = ["gtk4/v4_16"]
#gtk_v4_14 = ["gtk4/v4_14"]
#gtk_v4_12 = ["gtk4/v4_12"]
#gtk_v4_10 = ["gtk4/v4_10"]
#gtk_v4_8 = ["gtk4/v4_8"]
#gtk_v4_6 = ["gtk4/v4_6"]
#gtk_v4_4 = ["gtk4/v4_4"]
#gtk_v4_2 = ["gtk4/v4_2"]
#gtk_gnome_47 = ["gtk4/gnome_47"]
#gtk_gnome_46 = ["gtk4/gnome_46"]
#gtk_gnome_45 = ["gtk4/gnome_45"]
#gtk_gnome_44 = ["gtk4/gnome_44"]
#gtk_gnome_43 = ["gtk4/gnome_43"]
#gtk_gnome_42 = ["gtk4/gnome_42"]
#gtk_unsafe-assume-initialized = ["gtk4/unsafe-assume-initialized"]
#gtk_xml_validation = ["gtk4/xml_validation"]
#gtk_blueprint = ["gtk4/blueprint"]

#ADW

adw = ["dep:adw"]

#From https://gitlab.gnome.org/World/Rust/libadwaita-rs/-/blob/master/libadwaita/Cargo.toml?ref_type=heads

adw_gtk_v4_2 = ["adw/gtk_v4_2"]
#adw_gtk_v4_4 = ["adw/gtk_v4_4"]
adw_gtk_v4_6 = ["adw/gtk_v4_6"]
#adw_gtk_v4_8 = ["adw/gtk_v4_8"]
#adw_gtk_v4_10 = ["adw/gtk_v4_10"]
#adw_gtk_v4_12 = ["adw/gtk_v4_12"]
adw_gio_v2_80 = ["adw/gio_v2_80"]
adw_v1_1 = ["adw/v1_1"]
adw_v1_2 = ["adw/v1_2"]
adw_v1_3 = ["adw/v1_3"]
adw_v1_4 = ["adw/v1_4"]
adw_v1_5 = ["adw/v1_5"]
adw_v1_6 = ["adw/v1_6"]
adw_v1_7 = ["adw/v1_7"]

[dev-dependencies]
time = { version = "0.3.39", features = ["std"] }

#docs.rs

[package.metadata.docs.rs]
features = ["strong_widget_state"]
#all-features = true                    #Actually this setting doesn't make sense in this project.
rustdoc-args = ["--cfg", "docsrs"]
